Programmania/wwwroot/css/Index.css
/*Обнуление*/
* {
    padding: 0;
    margin: 0;
    border: 0;
}

    *, *:before, *:after {
        -moz-box-sizing: border-box;
        -webkit-box-sizing: border-box;
        box-sizing: border-box;
    }

:focus, :active {
    outline: none;
}

a:focus, a:active {
    outline: none;
}

nav, footer, header, aside {
    display: block;
}

html, body {
    height: 100%;
    width: 100%;
    font-size: 100%;
    line-height: 1;
    font-size: 14px;
    -ms-text-size-adjust: 100%;
    -moz-text-size-adjust: 100%;
    -webkit-text-size-adjust: 100%;
}

input, button, textarea {
    font-family: inherit;
}

    input::-ms-clear {
        display: none;
    }

button {
    cursor: pointer;
}

    button::-moz-focus-inner {
        padding: 0;
        border: 0;
    }

a, a:visited {
    text-decoration: none;
}

    a:hover {
        text-decoration: none;
    }

ul-li {
    list-style: none;
}

img {
    vertical-align: top;
}

h1, h2, h3, h4, h5, h6 {
    font-size: inherit;
    font-weight: 400;
}

/*----------------------------*/

.header-text {
    height: 70px;
}

    .header-text h3 {
        text-align: center;
        margin-top: 35px;
        font-weight: 100;
        font-size: 4vh;
        color: #00146b;
    }

.header-menu {
    background-color: #f7f7f7;
    display: flex;
    flex-direction: row;
    justify-content: center;
    height: 50px;
}

.header-menu__item {
    margin-left: 1%;
    text-decoration: none;
    margin-top: 12px;
    font-size: 2vh;
    color: black;
    transition: all 0.3s ease 0s;
}

    .header-menu__item:hover {
        color: #06a1bd;
        font-weight: 900;
    }

.header-image {
    width: 100%;
    height: 800px;
    background-image: url("../images/index-header-image.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    position: relative;
}

.header-image-text {
    position: absolute;
    bottom: 0;
    height: 400px;
    background-color: rgba(224,224,224, .3);
    width: 100%;
}

    .header-image-text h3, .header-image-text h5 {
        text-align: center;
        margin-top: 50px;
        text-transform: uppercase;
    }

    .header-image-text h3 {
        font-size: 6vh;
    }

    .header-image-text h5 {
        font-size: 5vh;
        font-weight: 400;
    }

.courses {
    margin-top: 50px;
}

.courses {
    width: 100%;
}

.course__header {
    text-align: center;
    font-size: 3vh;
    font-weight: 200;
}

.swiper {
    margin-top: 50px;
}


.swiper-slide {
    height: 400px !important;
}

.swiper-image{
    height: 400px;
}

    .swiper-image img {
        width: 100%;
        height: 100%;
    }

.swiper-image__text {
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 150px;
    background-color: rgba(225,225,225, .5);
}

    .swiper-image__text h3 {
        text-align: center;
    }

.advantages {   
    display: flex;
    flex-direction: row;
    flex: 1 1 50.00%;
    justify-content: space-around;
    min-height: 400px;
    background-color: #f8f8f8;
}

.advantages__image{
    width: 100%;
    min-height: 100%;
}

.advantages__image img{
    height: 100%;
    width: 100%;
}

.advantages__text{
    padding: 30px;
}

.advantages__text h3 {
    text-align: center;
    font-size: 3.5vh;
    font-weight: 200;
}
.advantages__text p{
    margin-top: 50px;
    font-weight: 300;
    font-size: 2.5vh;
}

.features {
    padding: 50px;
    background-color: #f0fff0;
}

.features h3 {
    text-align: center;
    font-size: 3.5vh;
    font-weight: 200;
}

.features__list{
    width: 400px;
    margin: 0 auto;
    margin-top: 30px;
}


.features__list ul {
    list-style: none;
    font-size: 3vh;
    font-weight: 200;
}

.features__list li{
    margin-top: 20px;
    background: url("../images/successImage.png") left no-repeat;
    padding: 0 0 0 100px;
}


.modal {
    padding: 10%;
    display: none;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: rgba(0,0,0,.4);
}

.modal-content {
    font-family: 'mainFont';
    position: relative;
    background-color: #fefefe;
    margin: auto;
    padding: 0;
    border: 1px solid #888;
    width: 80%;
    padding: 1% 2%;
    font-size: 3vh;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
    animation-name: animatetop;
    animation-duration: 0.4s
}

.error {
    font-size: 18px !important;
    color: red;
    margin-left: 10px;
}

@keyframes animatetop {
    from {
        top: -300px;
        opacity: 0
    }

    to {
        top: 0;
        opacity: 1
    }
}

.close {
    color: #aaa;
    float: right;
    font-size: 20px;
    font-weight: bold;
}

    .close:hover,
    .close:focus {
        color: black;
        text-decoration: none;
        cursor: pointer;
    }

#registerForm label, #loginForm label {
    margin-top: 20px;
    font-size: 3vh;
}

#registerForm input, #loginForm input {
    margin-top: 10px;
    font-size: 2.5vh;
}

#registerBtnOut, #loginBtnOut {
    margin: 30px;
    float: right;
}



.footer {
    background-color: #f5f5f5;
    padding: 30px;
}

.footer-links{
    width: 100px;
    margin: 0 auto;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.footer-links a {
    margin-left: 30px;
}

.footer-links_first{
    margin-left: 0px !important;
}

.footer-link__image{
    width: 32px;
    height: 32px;
}

.footer-link__image img{
    height: 100%;
    width: 100%;
}

.footer__text{
    padding: 50px;
}

.footer__text h5 {
    text-align: center;
    font-weight: 200;
}

@media(max-width: 1200px) {
    .header-image {
        height: 500px !important;
    }

    .header-image-text {
        height: 250px !important;
    }

        .header-image-text h3 {
            font-size: 4vh !important;
        }

        .header-image-text h5 {
            font-size: 3vh !important;
        }
    .advantages__image{
        width: 100%;
    }

    .advantages {
        flex-direction: column;
    }
}

@media(max-width: 850px) {
    .advantages__image {
        width: 100%;
    }

    .advantages {
        flex-direction: column;
    }
}

@media(max-width: 640px) {
    .header-image {
        height: 300px !important;
    }

    .header-image-text {
        height: 150px !important;
    }

        .header-image-text h3 {
            font-size: 3vh !important;
        }

        .header-image-text h5 {
            font-size: 2vh !important;
        }
    .swiper-slide {
        height: 300px !important;
    }
    .swiper-image{
        height: 300px;
    }

    .swiper-image__text{
        height: 100px;
    }

    .courses {
        margin-top: 20px;
    }

    .advantages{
        margin-top: 150px;      
    }

    .advantages__image {
        width: 100%;
    }
    .features__list {
        width: 200px;
    }

    .features__list li {
        padding: 0 0 0 50px;
        background-size: 25px;
    }

    .modal-content{
        width: 400px !important;
    }
}

@media(max-width: 448px) {
    .modal-content {
        width: 300px !important;
    }
}

@media(max-width: 320px) {
    .swiper-slide {
        height: 250px !important;
    }

    .swiper-image {
        height: 250px;
    }

    .swiper-image__text {
        height: 75px;
    }
    .modal-content {
        width: 250px !important;
    }
}

